# BudgetCL-ECG

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BLOCKERS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PAPER1_STATUS.md  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
budget_cl/: __init__.py  exceptions.py  types.py  version.py
budget_stats/: bca.py  effect_sizes.py  holm.py
checkpoints/: README.md  checksums.sha256
datasets/: README.md
docs/: experiment_matrix.md  memory_accounting.md  metrics.md  preprocessing.md  reproducibility.md  statistics.md
experiments/: common.py  run_ablation.py  run_primary.py  run_reserve_replication.py  run_split_first_sensitivity.py
manifests/: exclusions.md  experiment_record_manifest.csv  mitbih_ds1_records.csv  mitbih_ds2_primary_21.csv  mitbih_subject_identity_map.csv  source_checkpoint_manifest.json
manuscript/: README.md  main.tex  references.tex
preprocessing/: __init__.py  filters.py  influence_analysis.py  original_pipeline.py  rr_features.py  split_first_pipeline.py
preregistration/: PREREG_LOCK.txt  paper1_stat_plan.md
releases/: README.md  Replay-Plasticity-ECG-arxiv-v1.zip.sha256  arxiv_v1_source.tar.gz.sha256  checksums.sha256  release_manifest.json  v1.0.0-arxiv.md
results/: MANUSCRIPT_VALUE_MAP.md  README.md  SUPERSEDED.md  e6_accounting_report.md  e6_two_axis_accounting.csv  e8_mde.csv  e8_mde_power_curves.csv  e8_paired_tests.csv  e8_sensitivity_mean_aggregation.csv  e8_sensitivity_record232.csv  e8_tost_equivalence.csv  r0_estimator_matrix.csv  r1_headline_values.csv  r8_responder_exploratory.csv
scripts/: download_checkpoint.py  download_datasets.py  environment_report.py  gen_e6_accounting.py  generate_release_report.py  leakage_audit.py  make_figures.py  make_tables.py  package_arxiv.sh  r0_estimator_matrix.py  r1_arm_summary_median.py  r1_regen_primary_tables.py  r8_responder_exploratory.py  reproduce_paper.py  run_equivalence_mde.py  run_statistics.py  verify_checkpoint_hash.py  verify_dataset_manifest.py  verify_manuscript_numbers.py
statistics/: __init__.py  bootstrap.py  tost.py  wilcoxon.py
tests/: conftest.py  test_configs.py  test_manuscript_values.py  test_memory_accounting.py  test_metrics.py  test_preprocessing_boundary.py  test_quantization.py  (+4 more)
(+112 files in other folders)
